Bug 202863 - multiple skype contacts cannot be moved into the same metacontact
Summary: multiple skype contacts cannot be moved into the same metacontact
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-06 21:44 UTC by Kai Krakow
Modified: 2009-09-06 21:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Krakow 2009-08-06 21:44:37 UTC
Version:           0.70.90 (using 4.3.00 (KDE 4.3.0), Gentoo)
Compiler:          i686-pc-linux-gnu-gcc
OS:                Linux (i686) release 2.6.30-gentoo-r4

After activating the skype plugin, some of my metacontacts were autoassigned the correct skype contacts. Some of my friends use multiple skype identities for different reasons. I'd like to move them to the same metacontact in kopete but that doesn't work. If a metacontact already contained a skype contact it is not possible to add another skype contact to that metacontact.

Also there is an annoying bug after activating the skype plugin which I reported before and may be related: bug #202862.
Comment 1 Pali Rohár 2009-08-08 19:12:51 UTC
I try move some skype contacts to one metacontacts. For me it works. I dont have any problem with this.

Why you cant move skype contacts to one metacontact? It show you error?
Same as in bug #202862 send kDebug output
Comment 2 Kai Krakow 2009-08-12 21:55:14 UTC
Argh, after disabling the skype plugin and reenabling it, it works now... The other bug however is still open. I cannot move some contacts (no matter if they are skype or not), see bug #202862.
Comment 3 Pali Rohár 2009-08-13 08:49:32 UTC
So this bug can be closed.
Comment 4 Kai Krakow 2009-08-16 11:38:18 UTC
This was probably caused by an instable dbus connection between both (my skype sometimes gets stuck in the bluetooth stack and only partially works then).

Still one part of this bug report is annoying: All contacts have been moved to the root folder. The skype plugin should not have authority about which groups the contacts belong to upon activation.
Comment 5 Pali Rohár 2009-08-18 18:45:10 UTC
Fixed in trunk and backported to 4.3

If skype contact in skype client is in root group, kopete doesnt move it to kopete root group (top level).
Comment 6 Kai Krakow 2009-08-18 19:09:21 UTC
*thumbsup* Very nice, thank you! :-)
Comment 7 Matt Rogers 2009-09-06 21:35:39 UTC
Sounds like the issues in this bug are fixed. If they're not, then please open a new bug report instead of reopening this one. We want to try to keep reports in bugzilla to one bug per ticket number as much as possible so that we can provide the people reporting bugs adequate feedback as to when their issues get fixed and multiple reports in the same ticket don't help with that.