Dont move all metacontacts to root group after init skype protocol

BUG: 202863

svn path=/branches/KDE/4.3/kdenetwork/kopete/; revision=1013033